--- a/app/views/homes/_form.html.erb
+++ b/app/views/homes/_form.html.erb
@@ -1,22 +1,25 @@
 <%= form_for [@seller, @home] do |f| %>
+	<%= f.label :title %>
+	<%= f.text_field :title %>
+
 	<%= f.label :price %>
 	<%= f.number_field :price %>
-<br /><br />
+
 	<%= f.label :square_feet %>
 	<%= f.number_field :square_feet %>
-<br /><br />
+
 	<%= f.label :bathroom %>
 	<%= f.text_field :bathroom %>
-<br /><br />
+
 	<%= f.label :room %>
 	<%= f.text_field :room %>
-<br /><br />
+
 	<%= f.label :year_built %>
 	<%= f.text_field :year_built %>
-<br /><br />
+
 	<%= f.label :sold %>
 	<%= f.check_box :sold %>
-<br /><br />
-	<%= f.submit %>
-<br /><br />
+
+	<%= f.submit class:"btn btn-primary"%>
+
 <% end %>
