--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,34 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="https://bootswatch.com/readable/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css">
   <style type="text/css"></style>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand"<%= link_to "DevPoint Lab's Real Estate Agency", root_path %>></a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Sign Up', signup_path %><span class="sr-only">(current)</span></a></li>
+        <li><%= link_to 'Login', login_path %></li>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <% if flash.any? %>
 	<% flash.each do |key, value| %>
